--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,13 +60,16 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
 
     // Lifecycle
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0-alpha02'
 
     // Retrofit
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Navigation
+    implementation 'androidx.navigation:navigation-compose:2.7.2'
 
     // Coil
     implementation("io.coil-kt:coil-compose:2.4.0")
